--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					<img src="assets/images/about3.jpg" alt="" class="wow zoomIn" data-wow-delay="0.2s">
 				</a>
 				<div class="name wow fadeInUp" data-wow-delay="0.3s">
-						Kristen Stewart
+						SONU KUMAR
 				</div>
 			</div>
 			<ul id="mainmenu-area">
@@ -97,7 +97,7 @@
 									</div>
 									<div class="home-main-content">
 										<h4 class="heading wow fadeInUp" data-wow-delay="0.3s">
-											Kristen Stewart
+											SONU KUMAR
 										</h4>
 										<div class="designation wow zoomIn" data-wow-delay="0.4s">
 											<span>
