--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 											<ul>
 												
 												<li>
-													<a href="https://www.linkedin.com/in/sonu-kumar13/">
+													<a href="https://www.linkedin.com/in/sonu-kumar13/" target="_blank">
 														<i class="fab fa-linkedin-in"></i>
 													</a>
 												</li>
@@ -154,13 +154,11 @@
 									<div class="col-lg-8 align-self-center">
 										<div class="short-description wow fadeInUp">
 											<p>
-												Randon Text Received shutters expenses ye he pleasant. Drift as blind above at up. No up simple county stairs do should praise as. Drawings sir gay together landlord had law smallest. Formerly welcomed attended declared met say unlocked. Jennings outlived no dwelling denoting in peculiar as he believed.  
+												Senior PHP Developer @Ficuslot Innovation Private Limited. Skilled in HTML 5, CSS, JavaScript,Bootstrap, jQuery, Material Design Bootstrap , MySQL, WordPress, Search Engine Optimization (SEO) Google Web Master tool,Web debugging tools like Firebug, Chrome inspector etc.
 											</p>
-											<p>
-												Left till here away at to whom past. Feelings laughing at no wondered repeated provided finished. It acceptance thoroughly my advantages everything as.
-											</p>
+										
 											<div class="about-links">
-												<a href="#" class="mybtn3 mybtn-bg"> <span>Download CV</span> </a>
+												<a href="#" class="mybtn3 mybtn-bg"> <span>Details</span> </a>
 											</div>
 										</div>
 									</div>
