--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 									<div class="col-lg-8 align-self-center">
 										<div class="short-description wow fadeInUp">
 											<p>
-												Senior PHP Developer @Ficuslot Innovation Private Limited. Skilled in HTML 5, CSS, JavaScript,Bootstrap, jQuery, Material Design Bootstrap , MySQL, WordPress, Search Engine Optimization (SEO) Google Web Master tool,Web debugging tools like Firebug, Chrome inspector etc.
+												<b>Senior PHP Developer</b> @Ficuslot Innovation Private Limited. <b>Skilled</b> in HTML 5, CSS, JavaScript,Bootstrap, jQuery, Material Design Bootstrap , MySQL, WordPress, Search Engine Optimization (SEO) Google Web Master tool,Web debugging tools like Firebug, Chrome inspector etc.
 											</p>
 										
 											<div class="about-links">
