--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
 										</div>
 									</div>
 								</div>
-								<div class="row">
+							<!-- 	<div class="row">
 									<div class="col-lg-12">
 										<div class="about-content wow fadeInUp">
 											<div class="personal-info">
@@ -202,7 +202,7 @@
 											</div>
 										</div>
 									</div>
-								</div>
+								</div> -->
 							</div>
 						</div>
 					</div>
