--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 									<h4 class="title">
 										Web Development
 									</h4>
-									<p style="text-align: center;">
+									<p style="text-align:justify;">
 										Web development is the work involved in developing a website for the Internet or an intranet. Web development can range from developing a simple single static page of plain text to complex web-based internet applications, electronic businesses, and social network services.
 									</p>
 								</div>
@@ -299,7 +299,7 @@
 									<h4 class="title">
 										Creative design
 									</h4>
-									<p style="text-align: center;">Graphic design is the process of visual communication and problem-solving through the use of typography, photography, iconography and illustration. The field is considered a subset of visual communication and communication design, but sometimes the term "graphic design" is used synonymously. 
+									<p style="text-align: justify;">Graphic design is the process of visual communication and problem-solving through the use of typography, photography, iconography and illustration. The field is considered a subset of visual communication and communication design, but sometimes the term "graphic design" is used synonymously. 
 									</p>
 								</div>
 							</a>
@@ -312,7 +312,7 @@
 									<h4 class="title">
 										Fast & Optimized
 									</h4>
-									<p style="text-align: center;">In computer science, program optimization or software optimization is the process of modifying a software system to make some aspect of it work more efficiently or use fewer resources.In general, a computer program may be optimized so that it executes more rapidly, or to make it capable of operating with less memory storage or other resources, or draw less power.
+									<p style="text-align: justify;">In computer science, program optimization or software optimization is the process of modifying a software system to make some aspect of it work more efficiently or use fewer resources.In general, a computer program may be optimized so that it executes more rapidly, or to make it capable of operating with less memory storage or other resources, or draw less power.
 									</p>
 								</div>
 							</a>
