--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="side-menu">
 			<div class="heading-area">
 				<a href="index.html" class="profile-photo"  >
-					<img src="assets/images/about3.jpg" alt="" class="wow zoomIn" data-wow-delay="0.2s">
+					<img src="assets/images/img.jpg" alt="" class="wow zoomIn" data-wow-delay="0.2s">
 				</a>
 				<div class="name wow fadeInUp" data-wow-delay="0.3s">
 						SONU KUMAR
@@ -147,7 +147,7 @@
 								<div class="row">
 									<div class="col-lg-4">
 										<div class="about-image wow fadeInUp" data-wow-delay="0.3s">
-											<img src="assets/images/about2.jpg" alt="">
+											<img src="assets/images/img.jpg" alt="">
 										</div>
 										
 									</div>
