--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 							<div class="col-lg-6">
 								<div class="home-content">
 									<div class="home-image">
-										<img src="assets/images/about.jpg" alt="" class="wow zoomIn" data-wow-delay="0.2s">
+										<img src="assets/images/img.jpg" alt="" class="wow zoomIn" data-wow-delay="0.2s">
 									</div>
 									<div class="home-main-content">
 										<h4 class="heading wow fadeInUp" data-wow-delay="0.3s">
