--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
 						<div class="row justify-content-center">
 							<div class="col-lg-6">
 								<div class="home-content">
-									<div class="home-image">
+									<!-- <div class="home-image">
 										<img src="assets/images/img.jpg" alt="" class="wow zoomIn" data-wow-delay="0.2s">
-									</div>
+									</div> -->
 									<div class="home-main-content">
 										<h4 class="heading wow fadeInUp" data-wow-delay="0.3s">
 											SONU KUMAR
@@ -143,13 +143,13 @@
 						<div class="col-lg-12">
 							<div class="about">
 								<div class="row">
-									<div class="col-lg-4">
+									<!-- <div class="col-lg-4">
 										<div class="about-image wow fadeInUp" data-wow-delay="0.3s">
 											<img src="assets/images/img.jpg" alt="">
 										</div>
 										
-									</div>
-									<div class="col-lg-8 align-self-center">
+									</div> -->
+									<div class="col-lg-12 align-self-center">
 										<div class="short-description wow fadeInUp">
 											<p>
 												<b>Senior PHP Developer</b> @Ficuslot Innovation Private Limited. <b>Skilled</b> in HTML 5, CSS, JavaScript,Bootstrap, jQuery, Material Design Bootstrap , MySQL, WordPress, Search Engine Optimization (SEO) Google Web Master tool,Web debugging tools like Firebug, Chrome inspector etc.
