--- a/index.html
+++ b/index.html
@@ -149,7 +149,8 @@
 										</div>
 										
 									</div> -->
-									<div class="col-lg-12 align-self-center">
+									<div class="col-lg-2"></div>
+									<div class="col-lg-8 align-self-center">
 										<div class="short-description wow fadeInUp">
 											<p>
 												<b>Senior PHP Developer</b> @Ficuslot Innovation Private Limited. <b>Skilled</b> in HTML 5, CSS, JavaScript,Bootstrap, jQuery, Material Design Bootstrap , MySQL, WordPress, Search Engine Optimization (SEO) Google Web Master tool,Web debugging tools like Firebug, Chrome inspector etc.
@@ -160,6 +161,7 @@
 											</div>
 										</div>
 									</div>
+									<div class="col-lg-2"></div>
 								</div>
 							<!-- 	<div class="row">
 									<div class="col-lg-12">
