--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 										</div>
 										<div class="about-links wow fadeInUp" data-wow-delay="0.6s">
 											<a href="#contact" class="mybtn3 mybtn-bg"> <span>Contact Me</span></a>
-											<a href="https://www.youtube.com/watch?v=6zM4p_A0ISk" class="mybtn3 mybtn-bg video-play mfp-iframe"> <span> <i class="fas fa-play"></i> Intro</span> </a>
+											<!-- <a href="https://www.youtube.com/watch?v=6zM4p_A0ISk" class="mybtn3 mybtn-bg video-play mfp-iframe"> <span> <i class="fas fa-play"></i> Intro</span> </a> -->
 										</div>
 									</div>
 								</div>
