--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 									<div class="col-lg-8 align-self-center">
 										<div class="short-description wow fadeInUp">
 											<p>
-												<b>Senior PHP Developer</b> @Ficuslot Innovation Private Limited. <b>Skilled</b> in HTML 5, CSS, JavaScript,Bootstrap, jQuery, Material Design Bootstrap , MySQL, WordPress, Search Engine Optimization (SEO) Google Web Master tool,Web debugging tools like Firebug, Chrome inspector etc.
+												<b>Senior PHP Developer</b> @Ficuslot Innovation Private Limited. <b>Skilled</b> in PHP, HTML 5, CSS, JavaScript,Bootstrap, jQuery, Material Design Bootstrap , MySQL, WordPress, Search Engine Optimization (SEO) Google Web Master tool,Web debugging tools like Firebug, Chrome inspector etc.
 											</p>
 										
 											<div class="about-links">
@@ -219,7 +219,7 @@
 							<div class="single-counter wow fadeInUp">
 								<img src="assets/images/icon/005-target.png" alt="">
 								<div class="counter-wrapper">
-									<div class="counter">30</div> 
+									<div class="counter">23</div> 
 								</div>
 								<p class="text">
 									Project Done
@@ -230,7 +230,7 @@
 							<div class="single-counter wow fadeInUp">
 								<img src="assets/images/icon/002-medical-mask.png" alt="">
 								<div class="counter-wrapper">
-									<div class="counter">30</div> 
+									<div class="counter">21</div> 
 								</div>
 								<p class="text">
 									Happy users
@@ -241,7 +241,7 @@
 							<div class="single-counter wow fadeInUp">
 								<img src="assets/images/icon/053-success-1.png" alt="">
 								<div class="counter-wrapper">
-									<div class="counter">30</div> 
+									<div class="counter">19</div> 
 								</div>
 								<p class="text">
 									Great Reviews
@@ -252,7 +252,7 @@
 							<div class="single-counter wow fadeInUp">
 								<img src="assets/images/icon/045-hacker.png" alt="">
 								<div class="counter-wrapper">
-									<div class="counter">50</div>
+									<div class="counter">26</div>
 								</div>
 								<p class="text">
 									Support Team
