--- a/index.html
+++ b/index.html
@@ -386,6 +386,15 @@
 								<div class="education-list">
 									<div class="single-education wow fadeInUp">
 											<div class="year">
+												<span>2016-2017</span>
+											</div>
+											<h4 class="university-name">
+												Freelancing 
+											</h4>
+											<p class="degree">Full Stack Web Developer</p>
+									</div>
+									<div class="single-education wow fadeInUp">
+											<div class="year">
 												<span>2018-2020</span>
 											</div>
 										<h4 class="university-name">
@@ -393,16 +402,8 @@
 										</h4>
 										<p class="degree">Full Stack Web Developer</p>
 									</div>
-								<!-- 	<div class="single-education wow fadeInUp">
-											<div class="year">
-												<span>2011-2014</span>
-											</div>
-											<h4 class="university-name">
-												Envato Company 
-											</h4>
-											<p class="degree">Web Developer</p>
-									</div>
-									<div class="single-education wow fadeInUp">
+									
+									<!-- <div class="single-education wow fadeInUp">
 										<div class="year">
 											<span>2009-2011</span>
 										</div>
