--- a/index.html
+++ b/index.html
@@ -25,21 +25,12 @@
 
 <body>
 	<!-- preloader area start -->
-	<!-- <div class="preloader" id="preloader">
+	<div class="preloader" id="preloader">
 		<div class="loader loader-1">
 			<div class="loader-outter"></div>
 			<div class="loader-inner"></div>
 		</div>
-	</div> -->
-	<div>
-  <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
-	 viewBox="176.2 302.3 139.7 128.6" enable-background="new 176.2 302.3 139.7 128.6" xml:space="preserve">
-    <g>
-      <path id="loader" d="M189,417.9v-40.5h13c3,18,15.8,28.4,33.1,28.4c12,0,19.1-5,19.1-12.5c0-10.4-9.8-12-27.1-16.1c-25.1-6-39.1-12.2-39.1-31.6c0-18.9,15-32.5,39.2-32.5c11.3,0,20.4,2.8,29.9,9.6l3.6-7.1h11.1v37.6H259c-2-17.1-13.2-26.8-30.8-26.8c-10.8,0-17.1,5-17.1,11.9c0,11.1,10.8,11.9,30.2,16.7c23.9,6,36.6,13,36.6,31.2c0,20.3-15.6,33.7-41.6,33.7c-12.3,0-22.5-3.3-32.1-10.4l-3.5,8.1L189,417.9L189,417.9z"/>
-     
-    </g>
-    </svg>
-</div>
+	</div>
 	<!-- preloader area end -->
 
 
